--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,13 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+
+  deploy:
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: pull and reload on host
+        run: |
+          sshpass -p ${{secrets.ECS_PASSWORD}} ssh -o StrictHostKeyChecking=no root@${{secrets.ECS_IP}} "cd ~/FreeScholarBackEnd; python kill.py; git pull --force; git checkout main; python run.py;"
