--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,4 +37,4 @@ jobs:
     steps:
       - name: pull and reload on host
         run: |
-          sshpass -p ${{secrets.ECS_PASSWORD}} ssh -o StrictHostKeyChecking=no root@${{secrets.ECS_IP}} "cd ~/FreeScholarBackEnd; python kill.py; git pull --force; git checkout main; python run.py;"
+          sshpass -p ${{secrets.ECS_PASSWORD}} ssh -o StrictHostKeyChecking=no root@${{secrets.ECS_IP}} "cd ~/FreeScholarBackEnd; git pull --force; git checkout main; ./restart.sh;"
