--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,4 +37,4 @@ jobs:
     steps:
       - name: pull and reload on host
         run: |
-          sshpass -p ${{secrets.ECS_PASSWORD}} ssh -o StrictHostKeyChecking=no root@${{secrets.ECS_IP}} "cd ~/FreeScholar/FreeScholarBackEnd; git pull --force; git checkout main; ./reload.sh;"
+          sshpass -p ${{secrets.ECS_PASSWORD}} ssh -o StrictHostKeyChecking=no root@${{secrets.ECS_IP}} "cd /root/FreeScholar/FreeScholarBackEnd; git pull --force; git checkout main; ./reload.sh;"
