--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CICD
 
 on:
   push:
@@ -19,21 +19,22 @@ jobs:
         rm -r .git
     
     - name: Scp Transfer # 传输 Django 项目源码
-      uses: horochx/deploy-via-scp@master
+      uses: appleboy/scp-action@master
       with:
-        local: "."
-        remote: ${{ secrets.SCP_TARGET }}
         host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
-        user: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        source: "./"
+        target: "${{ secrets.SCP_TARGET }}"
+        rm: true
         
     - name: SSH Run # 运行部署脚本
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: |
           sh ${{ secrets.RUN_SCRIPT }} -i ${{ secrets.DOCKER_NAMESPACE }}/${{ secrets.DOCKER_IMAGE }} -t ${{ github.ref_name }} -w ${{ secrets.SCP_TARGET }}
