--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 socket = 0.0.0.0:8000
-project = FreeScholarBackEnd
-base = /root/FreeScholar
+project = backend
+base = /var/www/html
 base-app = FreeScholarBackEnd
 chdir = %(base)/%(project)
 wsgi-file = %(base)/%(project)/%(base-app)/wsgi.py
