--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,10 +21,17 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: set up secrets
+      run: |
+        touch ../secrets.json
+        echo "{ "HOST": ${{ secrets.HOST }}, "PORT": ${{ secrets.PORT }}, "NAME": ${{ secrets.NAME }}, "USER": ${{ secrets.USER }}, "PASSWORD": ${{ secrets.PASSWORD }}, "SECRET_KEY": ${{ secrets.SECRET_KEY }} }" > ../secrets.json
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Run Tests
       run: |
         python manage.py test
