--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         cd ${{github.workspace}}
         touch ../secrets.json
-        echo "{ "HOST": ${{ secrets.HOST }}, "PORT": ${{ secrets.PORT }}, "NAME": ${{ secrets.NAME }}, "USER": ${{ secrets.USER }}, "PASSWORD": ${{ secrets.PASSWORD }}, "SECRET_KEY": ${{ secrets.SECRET_KEY }} }" > ../secrets.json
+        echo "{ \"HOST\": ${{ secrets.HOST }}, \"PORT\": ${{ secrets.PORT }}, \"NAME\": ${{ secrets.NAME }}, \"USER\": ${{ secrets.USER }}, \"PASSWORD\": ${{ secrets.PASSWORD }}, \"SECRET_KEY\": ${{ secrets.SECRET_KEY }} }" > ../secrets.json
 
     - name: Install Dependencies
       run: |
