--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,25 +14,19 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.8]
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: set up secrets
       run: |
-        cd ${{github.workspace}}
-        touch ../secrets.json
-        echo "{ \"HOST\": ${{ secrets.HOST }}, \"PORT\": ${{ secrets.PORT }}, \"NAME\": ${{ secrets.NAME }}, \"USER\": ${{ secrets.USER }}, \"PASSWORD\": ${{ secrets.PASSWORD }}, \"SECRET_KEY\": ${{ secrets.SECRET_KEY }} }" > ../secrets.json
-
+        set +o posix && cd ${{github.workspace}} && touch ../secrets.json && echo "{ \"HOST\": ${{ secrets.HOST }}, \"PORT\": ${{ secrets.PORT }}, \"NAME\": ${{ secrets.NAME }}, \"USER\": ${{ secrets.USER }}, \"PASSWORD\": ${{ secrets.PASSWORD }}, \"SECRET_KEY\": ${{ secrets.SECRET_KEY }} }" > ../secrets.json
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
     - name: Run Tests
       run: |
         python manage.py test
