--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,7 +22,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: set up secrets
       run: |
-        set +o posix && cd ${{github.workspace}} && touch ../secrets.json && echo '{ "HOST": '${{ secrets.HOST }}', "PORT": '${{ secrets.PORT }}', "NAME": '${{ secrets.NAME }}', "USER": '${{ secrets.USER }}', "PASSWORD": '${{ secrets.PASSWORD }}', "SECRET_KEY": '${{ secrets.SECRET_KEY }}' }' > ../secrets.json
+        cd ${{github.workspace}}
+        touch ../secrets.json
+        echo '{ "HOST": '${{ secrets.HOST }}', "PORT": '${{ secrets.PORT }}', "NAME": '${{ secrets.NAME }}', "USER": '${{ secrets.USER }}', "PASSWORD": '${{ secrets.PASSWORD }}', "SECRET_KEY": '${{ secrets.SECRET_KEY }}' }' > ../secrets.json
+        cat ../secrets.json
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
